--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "consoletvs/charts": "^6.3",
         "doctrine/dbal": "^2.5",
         "fideloper/proxy": "~3.3",
         "jeroennoten/laravel-adminlte": "^1.24",
+        "khill/lavacharts": "3.0.*",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5.0"
